# rag-app-on-aws

./: .gitignore  .pre-commit-config.yaml  README.md  providers.tf  pyproject.toml  requirements-dev.txt  sonar-project.properties  tox.ini
.github/workflows/: deploy.yml  manual_cleanup.yml
environments/dev/: backend.tf  main.tf  terraform.tfvars  variables.tf
environments/prod/: backend.tf  main.tf  providers.tf  terraform.tfvars  variables.tf
environments/staging/: backend.tf  main.tf  providers.tf  terraform.tfvars  variables.tf
modules/api/: main.tf  outputs.tf  variables.tf
modules/auth/: main.tf  outputs.tf  variables.tf
modules/compute/: main.tf  outputs.tf  variables.tf
modules/database/: main.tf  outputs.tf  variables.tf
modules/monitoring/: main.tf  variables.tf
modules/storage/: main.tf  outputs.tf  variables.tf
modules/vpc/: main.tf  outputs.tf  variables.tf
rag_ui/: .env.example  README.md  app.py  requirements.txt
scripts/: cleanup.sh  import_resources.sh  network-diagnostics.sh  test-api.sh
src/auth_handler/: auth_handler.py  requirements.txt
src/db_init/: db_init.py  requirements.txt
src/document_processor/: document_processor.py  requirements.txt
src/query_processor/: query_processor.py  requirements.txt
src/tests/integration/: run_integration_tests.py
src/tests/unit/: conftest.py  test_db_init.py  test_document_processor.py  test_query_processor.py  test_upload_handler.py
src/upload_handler/: upload_handler.py
utils/: db_connectivity_test.py
